--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "A full fledged backend",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,5 +14,8 @@
     "backend"
   ],
   "author": "Aman Raj",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettier": "^3.1.1"
+  }
 }
